--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chat Unipar</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logounipar-Photoroom1.png" type="image/png" class="logoaba">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div id="container">
@@ -20,11 +21,11 @@
         </div>
     </div>
     <div id="chat-room">
-        <h2>Sala de Bate-Papo UNIPAR</h2>
+        <h2 class="batepapo">Sala de Bate-Papo UNIPAR</h2>
         <div id="messages"></div>
-        <input type="text" id="messageInput" placeholder="Digite sua mensagem"/>
-        <button onclick="sendMessage()">Enviar</button>
-        <button onclick="leaveChat()">Sair da Sala</button>        
+        <input type="text" id="messageInput" placeholder="Digite sua mensagem" class="escreva"/>
+        <button class="enviar" onclick="sendMessage()"><img src="keyboard_return.png" alt=""></button>
+        <button class="sair_sala" onclick="leaveChat()">Sair da Sala</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
