--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div class="logounipar">
-            <img class = 'logo' src="logounipar-Photoroom1.png" alt="logo_unipar">
+            <img class = 'logo' src="unipar.png" alt="logo_unipar">
         </div>      
         <h1 class="title">Seja Bem-Vindo ao Chat Unipar!</h1>
         <div class="login-box">
@@ -19,6 +19,10 @@
             <input type="text" id="username" placeholder="Escolha seu nome de usuário">
             <button onclick="enterChatRoom()">Acessar A Sala de Bate-Papo</button>
         </div>
+    </div>
+    <div id="menu-hamburguer">
+        
+
     </div>
     <div id="chat-room">
         <h2 class="batepapo">Sala de Bate-Papo UNIPAR</h2>
